--- a/src/NEvilES.DataStore/NEvilES.DataStore.csproj
+++ b/src/NEvilES.DataStore/NEvilES.DataStore.csproj
@@ -1,30 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net45;netstandard1.5</TargetFrameworks>
-    <DebugType>portable</DebugType>
-    <AssemblyName>NEvilES.DataStore</AssemblyName>
-    <PackageId>NEvilES.DataStore</PackageId>
-    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFrameworks>net45;netstandard1.5</TargetFrameworks>
+        <DebugType>portable</DebugType>
+        <AssemblyName>NEvilES.DataStore</AssemblyName>
+        <PackageId>NEvilES.DataStore</PackageId>
+        <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
+        <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
+        <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+        <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+        <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+        <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
+        <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+        <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
+    </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.5' ">
-    <ProjectReference Include="../NEvilES/NEvilES.csproj" />
-    <PackageReference Include="System.Linq" Version="4.3.0" />
-    <PackageReference Include="System.Data.Common" Version="4.3.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <ProjectReference Include="../NEvilES/NEvilES.csproj" />
-    <Reference Include="System.Data" />
-    <Reference Include="System" />
-  </ItemGroup>
+    <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.5' ">
+        <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
+    </PropertyGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.5' ">
+        <PackageReference Include="System.Linq" Version="4.3.0" />
+        <PackageReference Include="System.Data.Common" Version="4.3.0" />
+    </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+        <Reference Include="System.Data" />
+        <Reference Include="System" />
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="../NEvilES/NEvilES.csproj" />
+        <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    </ItemGroup>
 
 </Project>
