--- a/src/NEvilES.Tests/NEvilES.Tests.csproj
+++ b/src/NEvilES.Tests/NEvilES.Tests.csproj
@@ -20,6 +20,9 @@
         <PackageReference Include="StructureMap" Version="4.4.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0-beta5-build1225" />
         <PackageReference Include="System.Data.SqlClient" Version="4.3.0" />
-        <PackageReference Include="Npgsql" Version="3.2.0"/>
+        <PackageReference Include="Npgsql" Version="3.2.0" />
+    </ItemGroup>
+    <ItemGroup>
+      <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
     </ItemGroup>
 </Project>
